<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_name">Shym Shop</string>
    <string name="not_have_account_singup">New User? <b>Sign up</b></string>
    <string name="name_product">Name product</string>
    <string name="description_product">Description product</string>
    <string name="cost_product">Price of the product</string>
    <string name="category_product">Select a product category</string>
    <string name="upload">Upload Product</string>
    <string name="sigUn">Register</string>
    <string name="login">Login</string>
    <string name="continue_without_login">Continue without login</string>
    <string name="nursultan_apps">Nursultan Apps</string>
    <string name="welcome_to_nursultan_apps">Welcome to the Shym Shop app</string>
    <string name="full_name">Full Name</string>
    <string name="iin_main">Individual ID</string>
    <string name="divide">/</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="finalized">finalized</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="registerBtn">Register</string>
    <string name="add_category">Add a category</string>
    <string name="add_newproduct">Add a new product</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>

    <string name="profile">Profile</string>
    <string name="history">Search History</string>
    <string name="shared_friend">Invite friends</string>
    <string name="shym_shop_make">Shym Shop features</string>

    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="sevices">Services</string>
    <string name="welcome">Login/Registration</string>
    <string name="create_account">Create Account</string>
    <string name="uploadBtn">Upload</string>
    <string name="createBtn">Create</string>
    <string name="special_offers">Special offers</string>
    <string name="all_products">All products</string>
    <string name="contacts">Contacts</string>
    <string name="nursultan_serikovich">Nursultan Serikovich</string>
    <string name="accepted_payment_methods">Accepted payment methods</string>
    <string name="forget_password">Forget Password?</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="delete_button">Delete button</string>
    <string name="test_button">Test button</string>
    <string name="log_out_of_the_application">Log out of the application</string>
    <string name="enter_quick_access_code">Enter quick access code</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="pages">Pages</string>
    <string name="already_have_on_account">Already Have on Account?</string>
    <string name="email">email</string>
    <string name="think_of_a_shortcut_code">Think of a shortcut code</string>
    <string name="account">Account</string>
    <string name="account_creation">Member</string>
    <string name="favorite_products">Favorite Products</string>
    <string name="choose_language">Choose Language</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="details">Details</string>
    <string name="add_favorites">Add Favorite</string>
    <string name="remove_favorites">Remove Favorite</string>
    <string name="update_product">Update Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_discount">Product discount</string>
    <string name="search">Search</string>

</resources>