<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_gray"
            android:title="@string/profile"
            android:clickable="true"
            />

        <item
            android:id="@+id/email"
            android:icon="@drawable/ic_email_gray"
            android:title="1/1"
            android:clickable="true"/>

    </group>
    <!--    android:checked="true"-->

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/add_category_menu"
            android:icon="@drawable/ic_add_category"
            android:title="@string/add_category"
            android:clickable="true"/>
        <item
            android:id="@+id/add_product_menu"
            android:icon="@drawable/ic_pdf_white"
            android:title="@string/add_newproduct"
            android:clickable="true"/>
        <item
            android:id="@+id/settings_menu"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"
            android:clickable="true"/>
        <item
            android:id="@+id/favorites_menu"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favorites"
            android:clickable="true"/>
        <item
            android:id="@+id/history_menu"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/history"
            android:clickable="true"/>
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/shared_friend"
            android:icon="@drawable/ic_person_gray"
            android:title="@string/shared_friend"
            android:clickable="true"/>
        <item
            android:id="@+id/shym_shop_make"
            android:icon="@drawable/baseline_question_mark_24"
            android:title="@string/shym_shop_make"
            android:clickable="true"/>

    </group>

</menu>