<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.category.UploadPdfActivity">


    <!--Toolbar-->
    <androidx.cardview.widget.CardView
        android:id="@+id/imageView"
        style="@style/ScreenBackCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:elevation="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/back_profile_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/image_logo"
                style="@style/ImageChange"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:elevation="4dp"
                android:src="@drawable/logo_and_splash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/password_back"
                android:elevation="4dp"
                android:padding="10dp"
                android:src="@drawable/ic_back_btn_white_mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/centerToolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="30dp"

        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TitleTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/titleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_gray_01"
                android:drawableEnd="@drawable/ic_pdf_black"
                android:fontFamily="@font/roboto_400"
                android:hint="@string/name_product"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Input description-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TitleTil">

            <EditText
                android:id="@+id/descriptionEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/back_gray_01"
                android:drawableEnd="@drawable/ic_pdf_black"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_400"
                android:hint="@string/description_product"
                android:inputType="textMultiLine|textCapSentences"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01"
                android:textSize="16sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/costProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTil">

            <EditText
                android:id="@+id/costEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/back_gray_01"
                android:drawableEnd="@drawable/ic_img_tenge"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_400"
                android:hint="@string/cost_product"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01"
                android:textSize="16sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/categoryConst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/costProduct">

            <TextView
                android:id="@+id/categoryTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_orange_01"
                android:drawableStart="@drawable/ic_category"
                android:drawableEnd="@drawable/arrow_down_black"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_400"
                android:gravity="center_vertical"
                android:hint="@string/category_product"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01"
                android:textSize="16sp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/attacheConst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/add_new_product_salesman"
            android:padding="15dp"
            android:src="@drawable/ic_attach_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryConst" />

        <Button
            android:id="@+id/submitConst"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/add_new_product_salesman"
            android:text="@string/upload"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/attacheConst"
            app:layout_constraintTop_toBottomOf="@+id/categoryConst" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>